refactor(mcp): 完成MCP相关模块升级及重构